--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jdr-scheduler"
+name = "rpg-scheduler"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,3 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+r2d2 = "0.8.10"
+diesel = { version = "2.1.5", features = ["sqlite", "r2d2", "uuid"] }
+uuid = { version = "1.8.0", features = [ "v4", "fast-rng", "macro-diagnostics" ]}
+serde = { version = "1.0", features = ["derive"] }
